--- a/src/pages/admindashboard/AdminDashboard.css
+++ b/src/pages/admindashboard/AdminDashboard.css
@@ -1,79 +1,30 @@
 .admin-container {
-    display: flex;
-    height: 100vh;
-    font-family: 'Segoe UI', sans-serif;
-  }
-  
-  .sidebar {
-    width: 250px;
-    background-color: #1f1f2e;
-    color: white;
-    padding: 20px;
-    box-shadow: 2px 0 10px rgba(0,0,0,0.2);
-  }
-  
-  .sidebar h2 {
-    margin-bottom: 30px;
-    font-size: 24px;
-    text-align: center;
-    color: #ff4081;
-  }
-  
-  .sidebar-menu {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .sidebar-menu li {
-    padding: 12px;
-    margin-bottom: 10px;
-    background-color: #2e2e3e;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: 0.3s ease;
-  }
-  
-  .sidebar-menu li:hover {
-    background-color: #000000;
-    color: white;
-  }
-  
-  .admin-content {
-    flex: 1;
-    padding: 40px;
-    background-color: #f4f5fa;
-  }
-  
-  .cuenta-section {
-    margin-top: 30px;
-    padding-top: 20px;
-    border-top: 1px solid #444;
-  }
-  
-  .cuenta-title {
-    font-weight: bold;
-    margin-bottom: 8px;
-    color: #ffce57;
-  }
-  
-  .cuenta-email {
-    font-size: 14px;
-    color: #ccc;
-    margin-bottom: 10px;
-  }
-  
-  .logout-btn {
-    background-color: #491346;
-    color: white;
-    border: none;
-    padding: 8px 12px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s ease;
-  }
-  
-  .logout-btn:hover {
-    background-color: #ff0000;
-  }
-  
-  
+  display: flex;
+  height: 100vh;
+  font-family: 'Segoe UI', sans-serif;
+  overflow: hidden; 
+}
+
+.admin-content {
+  flex: 1;
+  padding: 40px 40px 40px 15px; /* Cambié el padding izquierdo a 20px */
+  background-color: #f4f5fa;
+  height: 100vh;
+  overflow-y: auto; 
+}
+
+.dashboard-title {
+  display: flex;
+  align-items: center;
+  font-size: 1.8rem;
+  gap: 10px;
+  color: #333;
+  margin-left: 30px;
+}
+
+.crown-icon {
+  color: #d4af37;
+  font-size: 2rem;
+  margin-left: 10px;
+  margin-top: 2px;
+}
