--- a/src/components/Forms/AddProductForm.css
+++ b/src/components/Forms/AddProductForm.css
@@ -1,35 +1,6 @@
-.add-product-modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    backdrop-filter: blur(8px); 
-    z-index: 999; 
-}
-
-.add-product-modal-content {
-    background-color: white;
-    padding: 20px 50px 20px 50px;
-    border-radius: 20px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000; 
-}
-
-
-.add-product-form {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-}
-
 .add-product-title {
     font-size: 2rem;
-    font-weight: 600;
+    font-weight: 700;
     color: #993f6b;
     text-align: center;
     margin-bottom: 20px;
@@ -38,7 +9,8 @@
 .form-group {
     display: flex;
     flex-direction: column;
-    gap: 3px;
+    gap: 5px;
+    margin-bottom: 10px;
 }
 
 .label-name {
