--- a/src/components/ProductsTable/ProductsTable.css
+++ b/src/components/ProductsTable/ProductsTable.css
@@ -1,3 +1,17 @@
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4); 
+  backdrop-filter: blur(6px); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
 .add-button {
   display: flex;
   align-items: center;
@@ -58,7 +72,7 @@
 .products-table th,
 .products-table td {
   padding: 16px 24px;
-  text-align: left;
+  text-align: center;
 }
 
 .products-table tbody tr {
@@ -69,11 +83,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 15px;
+  gap: 20px;
+  margin-top: 0;
+}
+
+.action-buttons button {
+  margin: 0 5px;
 }
 
 .edit-button,
-.delete-button {
+.delete-button,
+.view-button {
   background: none;
   border: none;
   font-size: 20px;
@@ -97,6 +117,61 @@
 .delete-button:hover {
   color: #b71c1c;
   transform: scale(1.1);
+}
+
+.view-button {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  color: #6a1b9a;
+  transition: transform 0.2s ease, color 0.2s ease;
+}
+
+.view-button:hover {
+  color: #4a148c;
+  transform: scale(1.1);
+}
+
+.view-modal {
+  max-width: 400px;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 16px;
+  padding: 30px;
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+}
+
+.product-title-modal-view {
+  font-weight: 700;
+  color: #993f6b;
+  margin-top: 20px;
+}
+
+.close-button {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif  ;
+  margin-top: 30px;
+  padding: 10px 30px;
+  background-color: #993f6b;
+  color: white;
+  border: none;
+  font-weight: 500;
+  font-size: 1rem;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.close-button:hover {
+  background-color: #ffe0ed;
+  color: #000;
+  transform: translateY(-2px);
+}
+
+.product-img-modal-view {
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
 }
 
 @media (max-width: 768px) {
