--- a/src/components/CategoriesTable/CategoriesTable.css
+++ b/src/components/CategoriesTable/CategoriesTable.css
@@ -1,4 +1,4 @@
-.modal-overlay {
+/* .modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
-  }
+  } */
   
 
 .add-button {
