--- a/src/components/ProductsTable/ProductsTable.css
+++ b/src/components/ProductsTable/ProductsTable.css
@@ -10,7 +10,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
-}
+  overflow-y: auto;
+} 
 
 .add-button {
   display: flex;
