--- a/src/components/ProductsTable/ProductsTable.css
+++ b/src/components/ProductsTable/ProductsTable.css
@@ -135,7 +135,7 @@
 }
 
 .view-modal {
-  max-width: 400px;
+  width: 350px;
   text-align: center;
   background-color: #fff;
   border-radius: 16px;
@@ -146,7 +146,6 @@
 .product-title-modal-view {
   font-weight: 700;
   color: #993f6b;
-  margin-top: 20px;
 }
 
 .close-button {
@@ -170,8 +169,8 @@
 }
 
 .product-img-modal-view {
-  width: 100%;
-  height: auto;
+  width: 65%;
+  height: 65%;
   border-radius: 12px;
 }
 
