--- a/src/pages/login/ResetPassword.css
+++ b/src/pages/login/ResetPassword.css
@@ -1,101 +1,138 @@
-
 .reset-password-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background: linear-gradient(135deg, #6F4559, #9c6c85);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background: linear-gradient(135deg, #6F4559, #9c6c85);
+}
+
+.reset-password-box {
+  background-color: #fff;
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  padding: 30px;
+  width: 80%;
+  max-width: 400px;
+  animation: fadeInUp 0.8s ease-out;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h2 {
+  color: #6F4559;
+  margin-bottom: 20px;
+  font-size: 1.8rem;
+  text-align: center;
+  font-weight: 600;
+}
+
+.reset-password-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 100%;
+}
+
+.reset-password-form input {
+  padding: 12px 15px;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  font-size: 1rem;
+  transition: box-shadow 0.3s;
+}
+
+.reset-password-form input:focus {
+  outline: none;
+  box-shadow: 0px 0px 8px rgba(111, 69, 89, 0.4);
+}
+
+.reset-password-form button {
+  padding: 12px;
+  background-color: #6F4559;
+  color: #FFFDFA;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1rem;
+  transition: all 0.3s ease;
+}
+
+.reset-password-form button:hover {
+  background-color: #cfbdc6;
+  color: #6F4559;
+  transform: scale(1.01);
+}
+
+.password-input-reset {
+  width: 100%;
+  padding-right: 40px;
+}
+
+
+.input-reset-password-container {
+  position: relative;
+  width: 100%;
+}
+
+.eye-icon-reset {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #6F4559;
+  transition: all 0.3s ease;
+}
+
+.eye-icon-reset:hover {
+  color: #ac728e;
+}
+
+.reset-error-message {
+  margin-top: 10px;
+  background-color: #ffe0e6;
+  color: #883460;
+  padding: 10px 15px;
+  border: 1px solid #883460;
+  border-radius: 8px;
+  font-size: 0.95rem;
+  font-weight: 500;
+  text-align: center;
+  animation: fadeIn 0.5s ease-out;
+  box-shadow: 0px 4px 10px rgba(136, 52, 96, 0.1);
+}
+
+/* Animaciones */
+@keyframes fadeInUp {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
   }
-  
+
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .reset-password-container {
+    flex-direction: column;
+    height: auto;
+  }
+
   .reset-password-box {
-    background-color: #fff;
-    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
-    border-radius: 20px;
-    padding: 30px;
-    width: 80%;
-    max-width: 400px;
-    animation: fadeInUp 0.8s ease-out;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  h2 {
-    color: #6F4559;
-    margin-bottom: 20px;
-    font-size: 1.8rem;
-    text-align: center;
-    font-weight: 600;
-  }
-  
-  .reset-password-form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
     width: 100%;
+    max-width: 350px;
+    padding: 25px;
   }
-  
-  .reset-password-form input {
-    padding: 12px 15px;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-    font-size: 1rem;
-    transition: box-shadow 0.3s;
+
+  h2 {
+    font-size: 1.5rem;
   }
-  
-  .reset-password-form input:focus {
-    outline: none;
-    box-shadow: 0px 0px 8px rgba(111, 69, 89, 0.4);
-  }
-  
-  .reset-password-form button {
-    padding: 12px;
-    background-color: #6F4559;
-    color: #FFFDFA;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 1rem;
-    transition: all 0.3s ease;
-  }
-  
-  .reset-password-form button:hover {
-    background-color: #cfbdc6;
-    color: #6F4559;
-    transform: scale(1.01);
-  }
-  
-  /* Animaciones */
-  @keyframes fadeInUp {
-    from {
-      transform: translateY(30px);
-      opacity: 0;
-    }
-  
-    to {
-      transform: translateY(0px);
-      opacity: 1;
-    }
-  }
-  
-  /* Responsive */
-  @media (max-width: 768px) {
-    .reset-password-container {
-      flex-direction: column;
-      height: auto;
-    }
-  
-    .reset-password-box {
-      width: 100%;
-      max-width: 350px;
-      padding: 25px;
-    }
-  
-    h2 {
-      font-size: 1.5rem;
-    }
-  }
-  
+}
