--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -193,6 +193,45 @@ h2 {
     transform: scale(1.05);
 }
 
+.password-input-register-container {
+    position: relative;
+    width: 100%;
+}
+
+.password-input-register {
+    width: 100%;
+    padding-right: 40px;
+}
+
+.eye-icon-register {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #6F4559;
+    font-size: 1.2rem;
+    transition: all 0.3s ease;
+}
+
+.eye-icon-register:hover {
+    color: #ac728e;
+}
+
+.register-error-message {
+    margin-top: 10px;
+    background-color: #ffe0e6;
+    color: #883460;
+    padding: 10px 15px;
+    border: 1px solid #883460;
+    border-radius: 8px;
+    font-size: 0.95rem;
+    font-weight: 500;
+    text-align: center;
+    animation: fadeIn 0.5s ease-out;
+    box-shadow: 0px 4px 10px rgba(136, 52, 96, 0.1);
+}
+
 /* Animaciones */
 @keyframes fadeInUp {
     from {
@@ -228,7 +267,7 @@ h2 {
         padding: 20px 0;
     }
 
-    .login-logo {
+    .register-logo {
         width: 200px;
     }
 
