--- a/src/components/Forms/AddProductForm.css
+++ b/src/components/Forms/AddProductForm.css
@@ -13,14 +13,18 @@
     overflow-y: auto;
 }
 
-.add-product-modal-content {
-    width: 500px; 
-    text-align: center;
+.add-product-form {
     background-color: #fff;
-    border-radius: 12px; 
-    padding: 20px; 
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    padding: 2rem;
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+    max-width: 800px;
+    margin: auto;
+    max-height: 70vh; /* Altura máxima relativa a la ventana */
+    overflow-y: auto; /* Activa scroll vertical */
+    padding-right: 10px; /* Evita que el scroll tape contenido */
 }
+
 
 .add-product-title {
     margin-bottom: 20px;
