--- a/src/components/ProductsTable/ProductsTable.css
+++ b/src/components/ProductsTable/ProductsTable.css
@@ -249,6 +249,51 @@
   font-style: italic;
 }
 
+.gallery-modal-table-view {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.main-image-gallery-table-container {
+  width: 90%;
+  max-width: 500px;
+  border: 1px solid #e6e6e6;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+.main-product-image {
+  width: 60%;
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+.thumbnails-table-container {
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+/* Cambiar a contain si es necesario */
+.thumbnail-table-view-product {
+  width: 80px;
+  height: 80px;
+  object-fit: cover; 
+  border: 2px solid transparent;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: transform 0.2s ease, border-color 0.2s ease;
+}
+
+.thumbnail-table-view-product:hover {
+  transform: scale(1.05);
+  border-color: #993f6b;
+}
+
 @media (max-width: 768px) {
   .products-title {
     font-size: 1.8rem;
