--- a/src/components/ProductCards/ProductCards.css
+++ b/src/components/ProductCards/ProductCards.css
@@ -18,6 +18,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: all 0.3s ease;
+    position: relative;
     cursor: pointer;
     text-align: center;
 }
@@ -72,4 +73,17 @@
     border-radius: 5px;
     border: 1px solid #ccc;
     
+}
+
+.wishlist-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    z-index: 2;
+    font-size: 1.5rem;
+}
+
+.product-card {
+    position: relative;
 }
