--- a/src/pages/Productdetail/productdetail.css
+++ b/src/pages/Productdetail/productdetail.css
@@ -35,8 +35,9 @@
   height: 80px;
   object-fit: cover;
   border-radius: 4px;
+  padding: 5px;
   cursor: pointer;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
 }
 
 .thumbnail:hover {
@@ -44,7 +45,7 @@
 }
 
 .thumbnail.active {
-  border-color: #000;
+  border-color: #b8b8b8;
 }
 
 .info-section {
@@ -69,7 +70,7 @@
   margin-bottom: 15px;
 }
 
-.product-price {
+.product-detail-price {
   font-size: 28px;
   font-weight: bold;
   margin-bottom: 25px;
