--- a/src/pages/home/PantalonesPage/Pantalones.css
+++ b/src/pages/home/PantalonesPage/Pantalones.css
@@ -44,7 +44,7 @@
     width: 250px; /* Fixed width for filters */
 }
 
-.products-container {
+.products-page-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
